--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 html {
-  font-family: "Red Hat Display";
+  font-family: "Red Hat Display", sans-serif;
 }
 
 body {
@@ -31,6 +31,47 @@ section[id] {
 #navbar a.active {
   color: #0ff;
   border-bottom: 3px solid #0ff;
+}
+
+#welcome span {
+  color: #0ff;
+}
+
+#social-icons li:hover {
+  color: white;
+  transform: scale(1.1) translateY(-5px);
+  box-shadow: 0 0 25px #0ff;
+  background-color: #0ff;
+}
+
+.btn-group a {
+  display: inline-block;
+  background-color: #0ff;
+  box-shadow: 0 0 25px #0ff;
+  border-radius: 4rem;
+  color: black;
+  border: 2px solid transparent;
+  letter-spacing: 0.1rem;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.btn-group a:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 50px #0ff;
+}
+
+.btn-group a:nth-of-type(2) {
+  background-color: #0b1c2c;
+  color: #0ff;
+  border: 2px solid #0ff;
+  box-shadow: 0 0 25px transparent;
+}
+
+.btn-group a:nth-of-type(2):hover {
+  box-shadow: 0 0 25px #0ff;
+  background-color: #0ff;
+  color: #0b1c2c;
 }
 
 #redes-sociales a.facebook:hover {
